--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 
   <body>
     <h1>Hello world</h1>
+
+    <h2>This is a Skillcrush exercise</h2>
+
+    <p>We learn how to change things between different devices depending on their width. </p>
+
+
+
   </body>
 </html>
